--- a/.github/workflows/qodana_code_quality.yml
+++ b/.github/workflows/qodana_code_quality.yml
@@ -5,12 +5,8 @@ on:
   push:
     branches: # Specify your branches here
       - main # The 'main' branch
-    #      - 'releases/*' # The release branches
-    paths:
-      - 'go.*'
-      - '**/*.go'
-      - 'src/**'
-      - '.github/workflows/qodana_code_quality.yml'
+      - 'releases/*' # The release branches
+
 jobs:
   qodana:
     runs-on: ubuntu-latest
@@ -19,7 +15,7 @@ jobs:
       pull-requests: write
       checks: write
     steps:
-      - uses: actions/checkout@v6
+      - uses: actions/checkout@v3
         with:
           ref: ${{ github.event.pull_request.head.sha }}  # to check out the actual pull request commit, not the merge commit
           fetch-depth: 0  # a full history is required for pull request analysis
@@ -28,5 +24,5 @@ jobs:
         with:
           pr-mode: false
         env:
-          QODANA_TOKEN: ${{ secrets.QODANA_TOKEN_1804606526 }}
+          QODANA_TOKEN: ${{ secrets.QODANA_TOKEN_876184588 }}
           QODANA_ENDPOINT: 'https://qodana.cloud'
