--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ on:
       - 'go.*'
       - '**/*.go'
       - 'src/**'
-      - 'build.yml'
+      - '.github/workflows/build.yml'
   #    tags:
   #      - 'v[0-9]+\.[0-9]+\.[0-9]+' # Push events to matching v*, i.e. v20.15.10
   pull_request:
