fix(ci): disable-version-bumping: true + min_test_coverage_percent: 80

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,6 @@ jobs:
     secrets:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     with:
-      #      disable-version-bumping: true
+      disable-version-bumping: true
       code_coverage: true
-#      min_test_coverage_percent: 6.6
+      min_test_coverage_percent: 80
