--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -64,7 +64,7 @@ brews:
       - tarball
 
     description: "FileTug – modern CLI file browser/picker with neat UI"
-    homepage: https://github.com/datatug/filetug
+    homepage: https://github.com/filetug/filetug
     license: MIT
 
     repository:
