fix: build on push to main & release bramches only

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,8 +2,9 @@ name: Build
 
 on:
   push:
-    branches-ignore:
-      - renovate/**
+    branches:
+      - main
+      - 'releases/*' # The release branches
     paths:
       - 'go.*'
       - '**/*.go'
